--- a/package.json
+++ b/package.json
@@ -4,8 +4,6 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^3.3.7",
-    "elasticsearch": "^13.2.0",
-    "lodash": "^4.17.4",
     "react": "^15.6.1",
     "react-bootstrap": "^0.30.10",
     "react-bootstrap-dropdown": "^0.3.0",
@@ -14,9 +12,18 @@
     "react-dom": "^15.6.1",
     "react-router": "^4.1.2",
     "react-router-dom": "^4.1.2",
-    "web3": "^0.20.1"
+    "web3": "^0.20.1",
+     "chart.js": "2.5.0",
+    "history": "^4.6.1",
+    "react-addons-css-transition-group": "15.5.2",
+    "react-addons-transition-group": "15.5.2",
+    "react-chartjs-2": "2.1.0",
+    "reactstrap": "4.6.2"
   },
   "devDependencies": {
+    "gulp": "^3.9.1",
+    "gulp-concat": "^2.6.0",
+    "gulp-sass": "^2.3.2",
     "react-scripts": "1.0.10"
   },
   "scripts": {
